--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "expo": "~37.0.3",
+    "expo-av": "^8.1.0",
+    "expo-barcode-scanner": "^8.1.0",
+    "expo-blur": "^8.1.0",
+    "expo-camera": "^8.2.0",
+    "expo-permissions": "^8.1.0",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -23,6 +28,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
+    "react-native-status-bar-height": "^2.5.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
