--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-crypto": "^2.2.0",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
@@ -51,6 +52,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
+    "react-native-sha256": "^1.3.6",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
     "react-native-tcp": "^3.3.2",
