--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/analytics": "^6.7.1",
+    "@react-native-firebase/app": "^6.7.1",
+    "@react-native-firebase/messaging": "^6.7.1",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@tradle/react-native-http": "^2.0.1",
@@ -30,6 +33,7 @@
     "expo-blur": "^8.1.0",
     "expo-camera": "^8.2.0",
     "expo-linear-gradient": "^8.1.0",
+    "expo-local-authentication": "^9.0.0",
     "expo-permissions": "^8.1.0",
     "expo-updates": "~0.1.0",
     "https-browserify": "0.0.1",
@@ -44,6 +48,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keychain": "^6.0.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-parsed-text": "^0.0.21",
