--- a/ios/epns/Info.plist
+++ b/ios/epns/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Enabling Face ID allows you to quickly and securely access your Account.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -41,8 +39,15 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow EPNS to access your camera. EPNS will use this to scan the QR Code of your wallet.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Enabling Face ID allows you to quickly and securely access your Account.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Allow EPNS to access your Audio. EPNS will use this to play sounds.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
