Home Profile Header, Partial Settings Screen

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# MAKE A COPY OF THIS AND FILL WITH YOUR CREDENTIALS, REMOVE .sample FROM FILENAME
+# MAKE A COPY OF THIS AND FILL WITH YOUR CREDENTIALS AND NAME IT .env (Remove .sample Part)
 
 # INFURA API
 TESTNET_INFURA_API=https://ropsten.infura.io/v3/...
