--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.1.0",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/analytics": "^6.7.1",
     "@react-native-firebase/app": "^6.7.1",
     "@react-native-firebase/messaging": "^6.7.1",
@@ -58,6 +58,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
     "react-native-sha256": "^1.3.6",
+    "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
     "react-native-tcp": "^3.3.2",
