--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "@react-navigation/stack": "^5.2.14",
     "@tradle/react-native-http": "^2.0.1",
     "assert": "^1.5.0",
+    "base-64": "0.1.0",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
+    "eth-crypto": "1.6.0",
     "ethereum-ens": "^0.8.0",
-    "ethers": "^4.0.47",
+    "ethers": "4.0.47",
     "events": "^1.1.1",
     "expo": "~37.0.3",
     "expo-av": "^8.1.0",
@@ -48,6 +50,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-hash": "1.2.6",
     "react-native-keychain": "^6.0.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
@@ -57,7 +60,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
-    "react-native-sha256": "^1.3.6",
+    "react-native-secp256k1": "git+https://github.com/HarshRajat/react-native-secp256k1.git",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
