Rolling to Firebase 5.6, 6.x sucks and is buggy

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,9 @@ platform :ios, '10.0'
 require_relative '../node_modules/react-native-unimodules/cocoapods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+# Override Firebase SDK Version
+$FirebaseSDKVersion = '6.3.0'
+
 target 'epns' do
   rnPrefix = "../node_modules/react-native"
 
