--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-native": "~0.61.5",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
     "react-native-keychain": "^6.0.0",
     "react-native-level-fs": "^3.0.1",
