--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "ethers": "4.0.47",
     "events": "^1.1.1",
     "expo": "~37.0.3",
+    "expo-asset": "8.1.4",
     "expo-av": "^8.1.0",
     "expo-barcode-scanner": "^8.1.0",
     "expo-blur": "^8.1.0",
     "expo-camera": "^8.2.0",
+    "expo-device": "2.1.0",
+    "expo-file-system": "8.1.0",
     "expo-linear-gradient": "^8.1.0",
     "expo-local-authentication": "^9.0.0",
     "expo-permissions": "^8.1.0",
+    "expo-sharing": "8.1.0",
     "expo-updates": "~0.1.0",
     "https-browserify": "0.0.1",
     "node-libs-browser": "^2.2.1",
@@ -51,10 +55,12 @@
     "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
+    "react-native-image-viewing": "0.1.8",
     "react-native-keychain": "^6.0.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-parsed-text": "^0.0.21",
+    "react-native-progress-circle": "2.1.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
