--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "eth-crypto": "1.6.0",
+    "eccrypto": "^1.1.3",
+    "secp256k1": "^4.0.1",
     "ethereum-ens": "^0.8.0",
     "ethers": "4.0.47",
     "events": "^1.1.1",
