Rich Notifications Done, Badge Attempt #2

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,10 @@ platform :ios, '10.0'
 require_relative '../node_modules/react-native-unimodules/cocoapods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+target 'NotificationServiceExtension' do
+   pod 'Firebase/Messaging'
+end
+
 target 'epns' do
   rnPrefix = "../node_modules/react-native"
 
