Hackish way of supporting rich notification: https://gist.github.com/actuosus/f24b18d89bce6da94441dbf9172b899e

--- a/ios/NotificationContentExtension/Info.plist
+++ b/ios/NotificationContentExtension/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>UNNotificationExtensionCategory</key>
-	<string>io.epns.epns</string>
+	<string>withappicon</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
