--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
+    "postinstall": "patch-package",
+    "prepare": "patch-package",
     "test": "jest"
   },
   "dependencies": {
@@ -25,9 +27,8 @@
     "constants-browserify": "^1.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
-    "eth-crypto": "1.6.0",
     "eccrypto": "^1.1.3",
-    "secp256k1": "^4.0.1",
+    "eth-crypto": "1.6.0",
     "ethereum-ens": "^0.8.0",
     "ethers": "4.0.47",
     "events": "^1.1.1",
@@ -46,6 +47,7 @@
     "expo-updates": "~0.1.0",
     "https-browserify": "0.0.1",
     "node-libs-browser": "^2.2.1",
+    "patch-package": "6.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
@@ -79,6 +81,7 @@
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.3.13",
     "readable-stream": "^1.0.33",
+    "secp256k1": "^4.0.1",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
