Changed environment config and few things on feed

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,11 @@
 # INFURA API
 TESTNET_INFURA_API=https://ropsten.infura.io/v3/...
 MAINNET_INFURA_API=https://mainnet.infura.io/v3/...
+
+# SERVER
+DEV_EPNS_SERVER=http://localhost:3000/apis
+PROD_EPNS_SERVER=https://yourserver.com/apis
+
+# ENDPOINTS
+ENDPOINT_PUSHTOKENS_REGISTER=/pushtokens/register
+ENDPOINT_PUSHTOKENS_REMOVE=/pushtokens/remove
