Production Level Commitment

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@
 TESTNET_INFURA_API=https://ropsten.infura.io/v3/...
 MAINNET_INFURA_API=https://mainnet.infura.io/v3/...
 
-# SERVER
+# SERVER | USE LOCALHOST FOR SIMULATOR
 DEV_EPNS_SERVER=http://localhost:3000/apis
 PROD_EPNS_SERVER=https://yourserver.com/apis
 
