Fixed Tablet feed style for image

--- a/ios/NotificationContentExtension/Info.plist
+++ b/ios/NotificationContentExtension/Info.plist
@@ -19,9 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>UNNotificationExtensionCategory</key>
-	<string>withappicon</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -36,5 +34,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.usernotifications.content-extension</string>
 	</dict>
+	<key>UNNotificationExtensionCategory</key>
+	<string>withappicon</string>
 </dict>
 </plist>
