Commit before Firebase update

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 # MAKE A COPY OF THIS AND FILL WITH YOUR CREDENTIALS AND NAME IT .env (Remove .sample Part)
 
 # INFURA API
+# For now mainnet is testnet only - https://mainnet.infura.io/v3/dfb6a4af36484bd4bf2736389c01a930
 TESTNET_INFURA_API=https://ropsten.infura.io/v3/...
 MAINNET_INFURA_API=https://mainnet.infura.io/v3/...
 
