--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.1.0",
+    "@expo/vector-icons": "10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
-    "@react-native-firebase/analytics": "6.7.2",
-    "@react-native-firebase/app": "6.7.1",
-    "@react-native-firebase/messaging": "^6.7.1",
-    "@react-navigation/native": "^5.1.7",
-    "@react-navigation/stack": "^5.2.14",
+    "@react-native-firebase/analytics": "7.1.0",
+    "@react-native-firebase/app": "7.1.0",
+    "@react-native-firebase/messaging": "^7.1.0",
+    "@react-navigation/native": "5.4.3",
+    "@react-navigation/stack": "5.4.0",
     "@tradle/react-native-http": "^2.0.1",
     "assert": "^1.5.0",
     "base-64": "0.1.0",
@@ -33,7 +33,7 @@
     "ethereum-ens": "^0.8.0",
     "ethers": "4.0.47",
     "events": "^1.1.1",
-    "expo": "~37.0.3",
+    "expo": "37.0.12",
     "expo-asset": "8.1.4",
     "expo-av": "^8.1.0",
     "expo-barcode-scanner": "^8.1.0",
@@ -45,7 +45,7 @@
     "expo-local-authentication": "^9.0.0",
     "expo-permissions": "^8.1.0",
     "expo-sharing": "8.1.0",
-    "expo-updates": "~0.1.0",
+    "expo-updates": "0.1.3",
     "https-browserify": "0.0.1",
     "node-libs-browser": "^2.2.1",
     "patch-package": "6.2.1",
@@ -58,6 +58,7 @@
     "react-native": "~0.61.5",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-firebase": "5.3.0-rc3",
     "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
@@ -67,21 +68,21 @@
     "react-native-parsed-text": "^0.0.21",
     "react-native-progress-circle": "2.1.0",
     "react-native-randombytes": "^3.5.3",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^2.7.0",
+    "react-native-screens": "2.8.0",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.9.0",
+    "react-native-unimodules": "0.9.1",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
-    "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.3.13",
-    "readable-stream": "^1.0.33",
+    "react-navigation": "4.3.9",
+    "react-navigation-stack": "2.5.1",
+    "readable-stream": "1.1.14",
     "secp256k1": "^4.0.1",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
@@ -90,10 +91,10 @@
     "url": "^0.10.3",
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
-    "web3": "^1.2.7"
+    "web3": "1.2.8"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "7.9.6",
     "babel-jest": "~25.2.6",
     "babel-preset-react-native": "^4.0.1",
     "jest": "~25.2.6",
