--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "buffer": "^4.9.2",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
+    "crypto-js": "4.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "eccrypto": "^1.1.3",
@@ -57,7 +58,6 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-crypto": "^2.2.0",
-    "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
@@ -82,7 +82,7 @@
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
     "readable-stream": "1.1.14",
-    "secp256k1": "^4.0.1",
+    "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
