--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "0.9.1",
+    "react-native-video": "4.4.5",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
     "react-navigation": "4.3.9",
