--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,6 @@ PROD_EPNS_SERVER=https://yourserver.com/apis
 # ENDPOINTS
 ENDPOINT_AUTHTOKEN=/pushtokens/authtoken
 ENDPOINT_REGISTER=/pushtokens/register
+
+# MEDIA RELATED
+YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
