--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-video')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     addUnimodulesDependencies()
