--- a/package.json
+++ b/package.json
@@ -77,9 +77,10 @@
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "0.9.1",
-    "react-native-video": "4.4.5",
+    "react-native-video": "^5.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
+    "react-native-youtube": "2.0.1",
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
     "readable-stream": "1.1.14",
