Support for CNS domain

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,6 @@ ENDPOINT_REGISTER=/pushtokens/register
 
 # MEDIA RELATED
 YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
+
+# UNSTOPPABLE DOMAINS ENDPOINTS
+CNS_ENDPOINT=https://unstoppabledomains.com/api/v1/resellers/{your_reseller_id}/domains
