Public Key flow (Onboarding)

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ PROD_EPNS_SERVER=https://yourserver.com/apis
 
 # ENDPOINTS
 ENDPOINT_AUTHTOKEN=/pushtokens/authtoken
+ENDPOINT_REGISTER_NO_AUTH=/pushtokens/register_no_auth
 ENDPOINT_REGISTER=/pushtokens/register
 
 # MEDIA RELATED
