--- a/package.json
+++ b/package.json
@@ -29,25 +29,26 @@
     "crypto-js": "4.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
-    "eccrypto": "^1.1.3",
+    "eccrypto": "1.1.5",
     "eth-crypto": "1.6.0",
     "ethereum-ens": "^0.8.0",
-    "ethers": "4.0.47",
+    "ethers": "5.0.8",
     "events": "^1.1.1",
     "expo": "37.0.12",
     "expo-asset": "8.1.4",
-    "expo-av": "^8.1.0",
-    "expo-barcode-scanner": "^8.1.0",
-    "expo-blur": "^8.1.0",
-    "expo-camera": "^8.2.0",
+    "expo-av": "8.4.0",
+    "expo-barcode-scanner": "8.2.1",
+    "expo-blur": "8.1.2",
+    "expo-camera": "8.3.1",
     "expo-device": "2.1.0",
     "expo-file-system": "8.1.0",
-    "expo-linear-gradient": "^8.1.0",
-    "expo-local-authentication": "^9.0.0",
-    "expo-permissions": "^8.1.0",
+    "expo-linear-gradient": "8.2.1",
+    "expo-local-authentication": "9.2.0",
+    "expo-permissions": "8.2.0",
     "expo-sharing": "8.1.0",
     "expo-updates": "0.1.3",
     "https-browserify": "0.0.1",
+    "moment": "2.27.0",
     "node-libs-browser": "^2.2.1",
     "patch-package": "6.2.1",
     "path-browserify": "0.0.0",
@@ -61,7 +62,7 @@
     "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
-    "react-native-keychain": "^6.0.0",
+    "react-native-keychain": "6.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-parsed-text": "^0.0.21",
@@ -84,6 +85,7 @@
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
     "readable-stream": "1.1.14",
+    "secp256k1": "git+https://github.com/HarshRajat/secp256k1-node.git",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
