--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,6 @@ YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
 
 # UNSTOPPABLE DOMAINS ENDPOINTS
 CNS_ENDPOINT=https://unstoppabledomains.com/api/v1/resellers/{your_reseller_id}/domains
+
+# APP VERSION
+APP_VERSION=0.3
