--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@expo/vector-icons": "10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
-    "@react-native-firebase/analytics": "^8.0.1",
+    "@react-native-firebase/analytics": "^8.0.0",
     "@react-native-firebase/app": "^9.0.0",
-    "@react-native-firebase/messaging": "^8.0.1",
+    "@react-native-firebase/messaging": "^8.0.0",
     "@react-navigation/native": "5.4.3",
     "@react-navigation/stack": "5.4.0",
     "@tradle/react-native-http": "^2.0.1",
@@ -67,13 +67,13 @@
     "react-native-os": "^1.2.6",
     "react-native-parsed-text": "^0.0.21",
     "react-native-progress-circle": "2.1.0",
-    "react-native-randombytes": "3.6.0",
+    "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "2.8.0",
     "react-native-sqlite-2": "3.0.1",
-    "react-native-status-bar-height": "2.6.0",
+    "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
