Rework of blockchain domain resolution to polyfill unsupported BigInt with big-integer + vanity fixes

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@unstoppabledomains/resolution": "1.20.0",
     "assert": "^1.5.0",
     "base-64": "0.1.0",
+    "big-integer": "1.6.48",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "console-browserify": "^1.2.0",
@@ -33,7 +34,7 @@
     "eccrypto": "1.1.5",
     "eth-crypto": "1.6.0",
     "ethereum-ens": "^0.8.0",
-    "ethers": "5.0.8",
+    "ethers": "5.0.32",
     "events": "^1.1.1",
     "expo": "37.0.12",
     "expo-asset": "8.1.4",
