ENS / CNS Support

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "5.4.3",
     "@react-navigation/stack": "5.4.0",
     "@tradle/react-native-http": "^2.0.1",
+    "@unstoppabledomains/resolution": "2.1.1",
     "assert": "^1.5.0",
     "base-64": "0.1.0",
     "browserify-zlib": "^0.1.4",
@@ -89,6 +90,7 @@
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
+    "styled-components": "5.2.1",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
