--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,7 +78,8 @@ import com.android.build.OutputFile
 project.ext.react = [
     entryFile: "index.js",
     enableHermes: false,
-    bundleInRelease: false
+    bundleInRelease: false,
+bundleInDebug: true
 ]
 
 apply from: '../../node_modules/react-native-unimodules/gradle.groovy'
