--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "https-browserify": "0.0.1",
     "moment": "2.27.0",
     "node-libs-browser": "^2.2.1",
-    "patch-package": "6.2.1",
+    "patch-package": "^6.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
@@ -74,6 +74,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "2.8.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "2.6.0",
     "react-native-svg": "^12.1.0",
