--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "2.8.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^12.1.0",
