--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.4.0",
     "@expo/vector-icons": "10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.1",
     "@react-native-firebase/app": "^9.0.0",
     "@react-native-firebase/messaging": "^8.0.1",
+    "@react-navigation/material-bottom-tabs": "^5.x",
     "@react-navigation/native": "5.4.3",
     "@react-navigation/stack": "5.4.0",
     "@tradle/react-native-http": "^2.0.1",
@@ -34,7 +36,7 @@
     "eccrypto": "1.1.5",
     "eth-crypto": "1.6.0",
     "ethereum-ens": "^0.8.0",
-    "ethers": "5.0.32",
+    "ethers": "^5.4.6",
     "events": "^1.1.1",
     "expo": "37.0.12",
     "expo-asset": "8.1.4",
@@ -67,6 +69,7 @@
     "react-native-keychain": "6.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
+    "react-native-paper": "^4.9.2",
     "react-native-parsed-text": "^0.0.21",
     "react-native-progress-circle": "2.1.0",
     "react-native-randombytes": "3.6.0",
@@ -81,6 +84,7 @@
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "0.9.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
