Made SignInScreen Functional Component

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-randombytes')
+    implementation project(':@react-native-async-storage_async-storage')
     implementation project(':react-native-video')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
