--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,6 @@
-#Thu Jul 15 10:16:14 IST 2021
+#Fri Dec 17 15:37:59 GST 2021
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.1-bin.zip
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
