--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ethersproject/shims": "^5.4.0",
     "@expo/vector-icons": "10.2.0",
+    "@react-native-async-storage/async-storage": "1.15.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.0",
@@ -23,6 +24,7 @@
     "@react-navigation/stack": "5.4.0",
     "@tradle/react-native-http": "^2.0.1",
     "@unstoppabledomains/resolution": "2.1.1",
+    "@walletconnect/react-native-dapp": "1.7.0",
     "assert": "^1.5.0",
     "base-64": "0.1.0",
     "big-integer": "1.6.48",
@@ -62,7 +64,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
-    "react-native-crypto": "^2.2.0",
+    "react-native-crypto": "2.2.0",
+    "react-native-fix-image": "2.1.0",
     "react-native-gesture-handler": "1.6.1",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
@@ -80,19 +83,18 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "2.6.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "9.6.4",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "0.9.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^9.4.0",
+    "react-native-webview": "11.15.0",
     "react-native-youtube": "2.0.1",
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
     "readable-stream": "1.1.14",
-    "secp256k1": "git+https://github.com/HarshRajat/secp256k1-node.git",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
@@ -112,7 +114,7 @@
     "jetifier": "2.0.0",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "~16.9.0",
-    "rn-nodeify": "^10.2.0"
+    "rn-nodeify": "github:tradle/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
