WalletConnect Login, Header, Notif rework, Settings rework, Channels rework

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,9 @@ ENDPOINT_AUTHTOKEN=/pushtokens/authtoken
 ENDPOINT_REGISTER_NO_AUTH=/pushtokens/register_no_auth
 ENDPOINT_REGISTER=/pushtokens/register
 
+# DEEPLINK
+DEEPLINK_URL=app_deeplink_url
+
 # MEDIA RELATED
 YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
 
