--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
   "expo": {
     "name": "epnsstaging",
     "slug": "epnsstaging",
-    "version": "0.5.1",
+    "version": "0.6",
+    "scheme": "epnsstaging",
     "platforms": [
       "ios",
       "android",
