--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,12 @@ PROD_EPNS_SERVER=https://yourserver.com/apis
 ENDPOINT_AUTHTOKEN=/pushtokens/authtoken
 ENDPOINT_REGISTER_NO_AUTH=/pushtokens/register_no_auth
 ENDPOINT_REGISTER=/pushtokens/register
+ENDPOINT_GET_FEEDS=/feeds/get_feeds
+ENDPOINT_GET_SPAM_FEEDS=/feeds/get_spam_feeds
+ENDPOINT_FETCH_CHANNELS=/channels/fetch_channels
+ENDPOINT_FETCH_SUBSCRIPTION=/channels/is_user_subscribed
+ENDPOINT_SUBSCRIBE_OFFCHAIN=/channels/subscribe_offchain
+ENDPOINT_UNSUBSCRIBE_OFFCHAIN=/channels/unsubscribe_offchain
 
 # DEEPLINK
 DEEPLINK_URL=app_deeplink_url
