--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ethersproject/shims": "^5.4.0",
     "@expo/vector-icons": "12.0.5",
     "@react-native-async-storage/async-storage": "1.15.14",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.0",
