--- a/package.json
+++ b/package.json
@@ -4,11 +4,25 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "expo start --web",
     "start": "react-native start",
+    "start:prod": "NODE_ENV=production react-native start",
+    "dev:ios": "npm-run-all -p start ios",
+    "dev:android": "npm-run-all -p start android",
+    "dev:ios-reset-cache": "npm run ios --reset-cache",
+    "dev:android-reset-cache": "npm run android --reset-cache",
+    "prod:ios": "npm-run-all -p start:prod ios",
+    "prod:android": "npm-run-all -p start:prod android",
+    "build:android-bundle": "cd android && ./gradlew bundleRelease",
+    "build:android-apk": "cd android && ./gradlew assembleRelease",
+    "web": "expo start --web",
     "postinstall": "patch-package",
     "prepare": "patch-package",
-    "test": "jest"
+    "test": "jest",
+    "list-simulators": "xcrun simctl list devices",
+    "list-emulators": "adb devices",
+    "simulator": "npx react-native run-ios --simulator='iPhone 11'",
+    "fresh-install:ios": "npm i --legacy-peer-deps && npx pod-install && npm run ios",
+    "fresh-install:android": "npm i --legacy-peer-deps && npx pod-install && npm run android"
   },
   "dependencies": {
     "@ethersproject/shims": "^5.4.0",
@@ -23,6 +37,7 @@
     "@react-navigation/material-bottom-tabs": "^5.x",
     "@react-navigation/native": "5.4.3",
     "@react-navigation/stack": "5.4.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@tradle/react-native-http": "^2.0.1",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.7.0",
@@ -98,6 +113,7 @@
     "react-redux": "^7.2.8",
     "readable-stream": "1.1.14",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
