--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "10.2.0",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.1",
@@ -36,19 +36,19 @@
     "ethereum-ens": "^0.8.0",
     "ethers": "5.0.32",
     "events": "^1.1.1",
-    "expo": "37.0.12",
-    "expo-asset": "8.1.4",
-    "expo-av": "8.4.0",
-    "expo-barcode-scanner": "8.2.1",
-    "expo-blur": "8.1.2",
-    "expo-camera": "8.3.1",
-    "expo-device": "2.1.0",
-    "expo-file-system": "8.1.0",
-    "expo-linear-gradient": "8.2.1",
-    "expo-local-authentication": "9.2.0",
-    "expo-permissions": "8.2.0",
-    "expo-sharing": "8.1.0",
-    "expo-updates": "0.1.3",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-av": "~8.6.0",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-blur": "~8.2.0",
+    "expo-camera": "~9.0.0",
+    "expo-device": "~2.3.0",
+    "expo-file-system": "~9.2.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-local-authentication": "~9.3.0",
+    "expo-permissions": "~9.3.0",
+    "expo-sharing": "~8.4.1",
+    "expo-updates": "~0.3.3",
     "https-browserify": "0.0.1",
     "moment": "2.27.0",
     "node-libs-browser": "^2.2.1",
@@ -57,11 +57,11 @@
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-crypto": "^2.2.0",
-    "react-native-gesture-handler": "1.6.1",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
     "react-native-keychain": "6.1.1",
@@ -70,20 +70,20 @@
     "react-native-parsed-text": "^0.0.21",
     "react-native-progress-circle": "2.1.0",
     "react-native-randombytes": "3.6.0",
-    "react-native-reanimated": "1.9.0",
-    "react-native-safe-area-context": "^0.7.3",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "2.8.0",
+    "react-native-screens": "~2.10.1",
     "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "2.6.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "0.9.1",
+    "react-native-unimodules": "~0.11.0",
     "react-native-video": "^5.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "^9.4.0",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-native-youtube": "2.0.1",
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
@@ -101,10 +101,10 @@
     "web3": "1.2.8"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
+    "@babel/core": "^7.12.9",
     "babel-jest": "~25.2.6",
     "babel-preset-react-native": "^4.0.1",
-    "jest": "~25.2.6",
+    "jest": "^26.6.3",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "~16.9.0",
     "rn-nodeify": "^10.2.0"
