--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prepare": "patch-package",
     "test": "jest",
     "build:android-bundle": "cd android && ./gradlew bundleRelease",
-    "build:android-apk": "cd android && ./gradlew assembleRelease --stacktrace -x ':app:bundleReleaseExpoUpdatesAssets'",
-    "build:android-apk-debug":"./gradlew assembleDebug"
+    "build:android-apk": "cd android && ./gradlew assembleRelease",
+    "build:android-debug-apk": "cd android && ./gradlew bundleRelease --stacktrace"
   },
   "dependencies": {
     "@ethersproject/shims": "^5.4.0",
@@ -43,19 +43,19 @@
     "ethereum-ens": "^0.8.0",
     "ethers": "^5.4.6",
     "events": "^1.1.1",
-    "expo": "37.0.12",
-    "expo-asset": "8.1.4",
-    "expo-av": "8.4.0",
-    "expo-barcode-scanner": "8.2.1",
-    "expo-blur": "8.1.2",
-    "expo-camera": "8.3.1",
-    "expo-device": "2.1.0",
-    "expo-file-system": "8.1.0",
-    "expo-linear-gradient": "8.2.1",
-    "expo-local-authentication": "9.2.0",
-    "expo-permissions": "8.2.0",
-    "expo-sharing": "8.1.0",
-    "expo-updates": "0.1.3",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-av": "~8.6.0",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-blur": "~8.2.0",
+    "expo-camera": "~9.0.0",
+    "expo-device": "~2.3.0",
+    "expo-file-system": "~9.2.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-local-authentication": "~9.3.0",
+    "expo-permissions": "~9.3.0",
+    "expo-sharing": "~8.4.1",
+    "expo-updates": "~0.3.3",
     "https-browserify": "0.0.1",
     "moment": "2.27.0",
     "node-libs-browser": "^2.2.1",
