--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.7.0",
     "assert": "^1.5.0",
+    "axios": "^0.27.2",
     "base-64": "0.1.0",
     "big-integer": "1.6.48",
     "browserify-zlib": "^0.1.4",
