--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "readable-stream": "1.1.14",
     "secp256k1": "git+https://github.com/HarshRajat/secp256k1-node.git",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
+    "sqlite3": "5.0.11",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "styled-components": "5.2.1",
