--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.1",
@@ -35,18 +35,18 @@
     "ethers": "5.0.32",
     "events": "^1.1.1",
     "expo": "^40.0.0",
-    "expo-asset": "~8.2.0",
-    "expo-av": "~8.6.0",
-    "expo-barcode-scanner": "~9.0.0",
-    "expo-blur": "~8.2.0",
-    "expo-camera": "~9.0.0",
-    "expo-device": "~2.3.0",
-    "expo-file-system": "~9.2.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-local-authentication": "~9.3.0",
-    "expo-permissions": "~9.3.0",
-    "expo-sharing": "~8.4.1",
-    "expo-updates": "~0.3.3",
+    "expo-asset": "~8.2.1",
+    "expo-av": "~8.7.0",
+    "expo-barcode-scanner": "~9.1.0",
+    "expo-blur": "~8.2.2",
+    "expo-camera": "~9.1.0",
+    "expo-device": "~2.4.0",
+    "expo-file-system": "~9.3.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-local-authentication": "~9.5.0",
+    "expo-permissions": "~10.0.0",
+    "expo-sharing": "~8.5.0",
+    "expo-updates": "~0.4.1",
     "https-browserify": "0.0.1",
     "moment": "2.27.0",
     "node-libs-browser": "^2.2.1",
@@ -57,9 +57,9 @@
     "querystring-es3": "^0.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "0.63.4",
     "react-native-crypto": "^2.2.0",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-hash": "1.2.6",
     "react-native-image-viewing": "0.1.8",
     "react-native-keychain": "6.1.1",
@@ -69,19 +69,19 @@
     "react-native-progress-circle": "2.1.0",
     "react-native-randombytes": "3.6.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~2.10.1",
+    "react-native-screens": "~2.15.2",
     "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.11.0",
+    "react-native-unimodules": "~0.12.0",
     "react-native-video": "^5.0",
-    "react-native-web": "~0.13.7",
-    "react-native-webview": "10.7.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0",
     "react-native-youtube": "2.0.1",
     "react-navigation": "4.3.9",
     "react-navigation-stack": "2.5.1",
@@ -100,7 +100,7 @@
     "web3": "1.2.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "babel-preset-react-native": "^4.0.1",
     "jest": "^26.6.3",
