--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epns_mobile_app",
+  "name": "epnsstaging",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,9 +15,8 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/analytics": "^15.3.0",
-    "@react-native-firebase/app": "^15.3.0",
-    "@react-native-firebase/messaging": "^15.3.0",
+    "@react-native-firebase/app": "15.4.0",
+    "@react-native-firebase/messaging": "15.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
@@ -40,6 +39,7 @@
     "expo-av": "^12.0.4",
     "expo-barcode-scanner": "^11.4.0",
     "expo-blur": "^11.2.0",
+    "expo-build-properties": "~0.3.0",
     "expo-camera": "^12.3.0",
     "expo-device": "^4.3.0",
     "expo-file-system": "^14.1.0",
@@ -70,6 +70,7 @@
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "9.6.4",
+    "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-redux": "^8.0.2",
     "readable-stream": "^1.0.33",
