--- a/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/epns_mobile_app.xcscheme
+++ b/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/epns_mobile_app.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "epns_mobile_app.app"
-               BlueprintName = "epns_mobile_app"
-               ReferencedContainer = "container:epns_mobile_app.xcodeproj">
+               BuildableName = "epnsstaging.app"
+               BlueprintName = "epnsstaging"
+               ReferencedContainer = "container:epnsstaging.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "epns_mobile_appTests.xctest"
-               BlueprintName = "epns_mobile_appTests"
-               ReferencedContainer = "container:epns_mobile_app.xcodeproj">
+               BuildableName = "epnsstagingTests.xctest"
+               BlueprintName = "epnsstagingTests"
+               ReferencedContainer = "container:epnsstaging.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "epns_mobile_app.app"
-            BlueprintName = "epns_mobile_app"
-            ReferencedContainer = "container:epns_mobile_app.xcodeproj">
+            BuildableName = "epnsstaging.app"
+            BlueprintName = "epnsstaging"
+            ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "epns_mobile_app.app"
-            BlueprintName = "epns_mobile_app"
-            ReferencedContainer = "container:epns_mobile_app.xcodeproj">
+            BuildableName = "epnsstaging.app"
+            BlueprintName = "epnsstaging"
+            ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
@@ -83,6 +83,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "epnsstaging"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
