import order done

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
@@ -102,6 +103,7 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "prettier": "^2.7.1",
     "react-native-dotenv": "^3.3.1",
     "react-test-renderer": "18.0.0",
     "rn-nodeify": "^10.3.0",
