notifee setup done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "src/*": ["src/*"]
-    }
+    },
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   }
 }
