few console commits

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -56,3 +56,11 @@ target 'epnsstaging' do
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
+$NotifeeExtension = true
+
+target 'NotifeeNotificationService' do
+  use_frameworks!
+  pod 'RNNotifeeCore', :path => '../node_modules/@notifee/react-native/RNNotifeeCore.podspec'
+end
+
