--- a/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/epnsstaging.xcscheme
+++ b/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/epnsstaging.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "epnsstaging.app"
+               BuildableName = "EPNS Staging.app"
                BlueprintName = "epnsstaging"
                ReferencedContainer = "container:epnsstaging.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "epnsstaging.app"
+            BuildableName = "EPNS Staging.app"
             BlueprintName = "epnsstaging"
             ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "epnsstaging.app"
+            BuildableName = "EPNS Staging.app"
             BlueprintName = "epnsstaging"
             ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
