ios workspace refactor done

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-  "name": "epnsstaging",
-  "displayName": "EPNS Staging",
+  "name": "epns",
+  "displayName": "EPNS",
   "expo": {
-    "name": "epnsstaging",
-    "slug": "epnsstaging",
-    "version": "0.6",
-    "scheme": "epnsstaging",
+    "name": "epns",
+    "slug": "epns",
+    "version": "0.6.5",
+    "scheme": "epns",
     "platforms": [
       "ios",
       "android",
