--- a/ios/epns.xcodeproj/xcshareddata/xcschemes/epns.xcscheme
+++ b/ios/epns.xcodeproj/xcshareddata/xcschemes/epns.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EPNS Staging.app"
-               BlueprintName = "epnsstaging"
-               ReferencedContainer = "container:epnsstaging.xcodeproj">
+               BuildableName = "EPNS .app"
+               BlueprintName = "epns"
+               ReferencedContainer = "container:epns.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "epnsstagingTests.xctest"
-               BlueprintName = "epnsstagingTests"
-               ReferencedContainer = "container:epnsstaging.xcodeproj">
+               BuildableName = "epnsTests.xctest"
+               BlueprintName = "epnsTests"
+               ReferencedContainer = "container:epns.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
-            BlueprintName = "epnsstaging"
-            ReferencedContainer = "container:epnsstaging.xcodeproj">
+            BuildableName = "EPNS .app"
+            BlueprintName = "epns"
+            ReferencedContainer = "container:epns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
-            BlueprintName = "epnsstaging"
-            ReferencedContainer = "container:epnsstaging.xcodeproj">
+            BuildableName = "EPNS .app"
+            BlueprintName = "epns"
+            ReferencedContainer = "container:epns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
@@ -83,7 +83,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "epnsstaging"
+      customArchiveName = "epns"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
