--- a/ios/epns/Supporting/Expo.plist
+++ b/ios/epns/Supporting/Expo.plist
@@ -5,6 +5,6 @@
     <key>EXUpdatesSDKVersion</key>
     <string>46.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@prodigy/epnsstaging</string>
+    <string>https://exp.host/@prodigy/epns</string>
   </dict>
 </plist>
